[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
ahash = { version = "*" }
rayon = { version = "1" }
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
modinverse = { version = "*" }
mod_exp = { version = "*" }
bitvec = { version = "1" }
mimalloc = { version = "*" }
itertools = { version = "*" }
num = { version = "*" }
num-integer = { version = "*" }
cached = { version = "*" }
anyhow = { version = "1" }
smallvec = { version = "1" }

[features]
bench = []

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
debug = true
